Fixes overflow issue with Menu Bar

--- a/src/Extra.css
+++ b/src/Extra.css
@@ -26,7 +26,6 @@
 
 .menuBar {
     width: 100%;
-    overflow: auto;
 }
 
 .menuBar button {
@@ -91,4 +90,11 @@
 .checkoutPanel {
     width: 40%;
     padding: 20px;
+}
+
+/* CLEARFIX */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
